force-app/main/default/objects/Retail_Lot_No__c/Retail_Lot_No__c.object-meta.xml
<CustomObject>
    <label>Retail Lot No</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Lot No Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Lot No</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>