force-app/main/default/objects/Retail_Lot_No__c/fields/Add_Product__c.field-meta.xml
<CustomField>
    <fullName>Add_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Product</label>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail Lot No</relationshipLabel>
    <relationshipName>Retail_Lot_No</relationshipName>
    <type>Lookup</type>
</CustomField>