force-app/main/default/objects/Retail_Lot_No__c/fields/Add_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Add_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Supplier</label>
    <referenceTo>Retail_Supplier__c</referenceTo>
    <relationshipLabel>Retail Lot No</relationshipLabel>
    <relationshipName>Retail_Lot_No</relationshipName>
    <type>Lookup</type>
</CustomField>